--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,39 @@
 {
+    // See https://go.microsoft.com/fwlink/?LinkId=733558
+    // for the documentation about the tasks.json format
+    "version": "2.0.0",
     "tasks": [
         {
-            "type": "shell",
             "label": "compile",
-            "command": "C:\\cygwin64\\bin\\make.exe",
-            "args": [ ],
+            "type": "shell",
+            "command": "${command:amiga.bin-path}\\gnumake.exe",
+            "args": [
+                "-j4",
+            ],
             "options": {
-                "cwd": "."
+                "cwd": "${workspaceRoot}",
+                "env": {
+                    "PATH": "${command:amiga.bin-path}\\opt\\bin;${command:amiga.bin-path}"
+                }
+            },
+            "problemMatcher": [
+                {
+                    "base": "$gcc",
+                    "fileLocation": "absolute"
+                }
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
             }
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
